--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p data-testid="myTrack">Frontend</p>
 </div>
 <div>
-    <a href="" data-testid="githubURL"><button>GitHub Repository</button></a>
+    <a href="https://github.com/Ogosbaby/Bio" data-testid="githubURL"><button>GitHub Repository</button></a>
 </div>
 
     <script>
